--- a/app/src/main/res/layout/activity_acercadenos.xml
+++ b/app/src/main/res/layout/activity_acercadenos.xml
@@ -2,96 +2,203 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:id="@+id/relativeLayout3"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="393dp"
-        android:layout_height="90dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout8"
+    tools:context=".MainActivity_NotSignedIn">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/horizontal_nav_bar"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <FrameLayout
-        android:id="@+id/frameLayout5"
-        android:layout_width="391dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="2dp"
-        android:background="#FFEB3B"
-        android:foregroundTint="#FFEB3B"
+        <ImageButton
+            android:id="@+id/carrito_icon"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/carrito_icon"
+            android:contentDescription="@string/carrito"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.517"
+            tools:ignore="TouchTargetSizeCheck"
+            tools:layout_conversion_absoluteHeight="40dp"
+            tools:layout_conversion_absoluteWidth="40dp" />
+
+        <ImageButton
+            android:id="@+id/perfil"
+            android:layout_width="35dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginEnd="12dp"
+            android:background="@drawable/perfil"
+            android:contentDescription="@string/perfil"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/carrito_icon"
+            app:layout_constraintStart_toEndOf="@+id/logo"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck"
+            tools:layout_conversion_absoluteHeight="40dp"
+            tools:layout_conversion_absoluteWidth="40dp" />
+
+        <ImageButton
+            android:id="@+id/menu"
+            android:layout_width="40dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/menu"
+            android:contentDescription="@string/menu"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.533"
+            tools:ignore="TouchTargetSizeCheck"
+            tools:layout_conversion_absoluteHeight="40dp"
+            tools:layout_conversion_absoluteWidth="40dp" />
+
+        <ImageButton
+            android:id="@+id/logo"
+            android:layout_width="200dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/logo"
+            android:contentDescription="@string/logo"
+            android:foregroundGravity="center|center_horizontal"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/perfil"
+            app:layout_constraintStart_toEndOf="@+id/menu"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck"
+            tools:layout_conversion_absoluteHeight="70dp"
+            tools:layout_conversion_absoluteWidth="245dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bloque_amarillo"
+        android:layout_width="0dp"
+        android:layout_height="700dp"
+        android:layout_marginBottom="200dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </FrameLayout>
-
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="301dp"
-        android:layout_height="52dp"
-        android:contentDescription="TODO"
-        app:layout_constraintBottom_toBottomOf="@+id/frameLayout5"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01999998"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_nav_bar"
+        app:layout_constraintVertical_bias="0.0">
 
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="376dp"
-        android:layout_height="256dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_vivamus_at_risus_varius_egestas_magna_vel_pretium_diam_phasellus_accumsan_tortor_at_consectetur_congue_elit_ipsum_tempus_sem_vitae_pulvinar_orci_nibh_condimentum_nisl_donec_volutpat_at_massa_et_ultricies_proin_viverra_felis_nulla_et_finibus_augue_tincidunt_non_morbi_maximus_velit_rutrum_eros_ultrices_rhoncus_curabitur_libero_magna_tincidunt_sit_amet_varius_nec_aliquam_nec_erat_phasellus_ultrices_metus_nibh_et_congue_est_lobortis_tincidunt_nam_a_mollis_sem_mauris_lobortis_justo_ut_sapien_interdum_a_fermentum_nisl_maximus_in_et_efficitur_arcu_sed_viverra_neque_proin_interdum_ornare_euismod_phasellus_accumsan_orci_nec_ligula_hendrerit_placerat_donec_id_congue_massa_in_vulputate_mi_a_arcu_dictum_vel_congue_massa_scelerisque"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout8" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/authLayout"
+            android:layout_width="0dp"
+            android:layout_height="650dp"
+            android:layout_marginBottom="30dp"
+            android:background="@color/white"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
-    <FrameLayout
-        android:id="@+id/frameLayout8"
-        android:layout_width="393dp"
-        android:layout_height="70dp"
-        android:background="#FFEB3B"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="340dp"
+                android:layout_height="95dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="27dp"
+                android:text="@string/texto1Hist"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                tools:ignore="MissingConstraints"
+                tools:text="Testfarma nace para cubrir la necesidad de ir más allá en la venta y distribución de insumos médicos y pruebas de diagnóstico clínico, así como de productos farmacéuticos. " />
 
-    </FrameLayout>
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="188dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/historia"
+                android:textAlignment="textEnd"
+                android:textSize="26sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
+                tools:text="Nuestra Historia" />
 
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="105dp"
-        android:elegantTextHeight="false"
-        android:shadowColor="#090808"
-        android:text="@string/acerca_de_nosotros"
-        android:textColor="#282828"
-        android:textColorHighlight="#303030"
-        android:textColorHint="#2E2E2E"
-        android:textColorLink="#1E1E1E"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="340dp"
+                android:layout_height="95dp"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="26dp"
+                android:text="@string/texto2Hist"
+                android:textAlignment="textEnd"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView18"
+                tools:ignore="TextContrastCheck,TextContrastCheck"
+                tools:text="Testfarma, es una empresa que brinda además asesoría técnica con profesionales de la salud, para que el cliente pueda implementar efectivamente sus proyectos de diagnóstico, bien sea en el ámbito de la salud laboral y ocupacional; así como tamizajes y diagnósticos para trabajadores ó público en general." />
 
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="360dp"
-        android:layout_height="189dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="30dp"
-        android:contentDescription="TODO"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView22"
-        app:srcCompat="@drawable/imagen_ejemplouno"
-        tools:ignore="ImageContrastCheck" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="61dp"
+                android:layout_marginEnd="61dp"
+                android:fontFamily="sans-serif"
+                android:text="@string/acerca"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4"
+                tools:text="A cerca de nosotros" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/docsvertical" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
