--- a/app/src/main/res/layout/user_info_layout.xml
+++ b/app/src/main/res/layout/user_info_layout.xml
@@ -20,8 +20,8 @@
 
         <ImageButton
             android:id="@+id/carrito_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/carrito_icon"
             android:contentDescription="@string/carrito"
@@ -35,29 +35,33 @@
 
         <ImageButton
             android:id="@+id/perfil"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="35dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="2dp"
             android:layout_marginEnd="12dp"
             android:background="@drawable/perfil"
             android:contentDescription="@string/perfil"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/carrito_icon"
+            app:layout_constraintStart_toEndOf="@+id/logo"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_conversion_absoluteHeight="40dp"
             tools:layout_conversion_absoluteWidth="40dp" />
 
         <ImageButton
             android:id="@+id/menu"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="40dp"
+            android:layout_height="35dp"
             android:layout_marginStart="14dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="3dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/menu"
             android:contentDescription="@string/menu"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.533"
@@ -67,7 +71,7 @@
         <ImageButton
             android:id="@+id/logo"
             android:layout_width="200dp"
-            android:layout_height="48dp"
+            android:layout_height="42dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="2dp"
@@ -114,8 +118,10 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
                 tools:ignore="SpeakableTextPresentCheck">
 
                 <LinearLayout
