--- a/app/src/main/res/layout/activity_acercadenos.xml
+++ b/app/src/main/res/layout/activity_acercadenos.xml
@@ -22,29 +22,28 @@
             android:id="@+id/perfil"
             android:layout_width="35dp"
             android:layout_height="42dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/perfil"
             android:contentDescription="@string/perfil"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="40dp"
-            tools:layout_conversion_absoluteWidth="40dp"
-            tools:layout_editor_absoluteX="342dp" />
+            tools:layout_conversion_absoluteWidth="40dp" />
 
         <ImageButton
             android:id="@+id/menu"
             android:layout_width="40dp"
             android:layout_height="35dp"
-            android:layout_marginStart="14dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="6dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/menu"
             android:contentDescription="@string/menu"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.533"
@@ -56,17 +55,18 @@
             android:id="@+id/logo"
             android:layout_width="200dp"
             android:layout_height="42dp"
-            android:layout_marginStart="48dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/logo"
             android:contentDescription="@string/logo"
             android:foregroundGravity="center|center_horizontal"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/perfil"
+            app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toEndOf="@+id/menu"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.611"
             tools:ignore="TouchTargetSizeCheck"
             tools:layout_conversion_absoluteHeight="70dp"
             tools:layout_conversion_absoluteWidth="245dp" />
@@ -76,7 +76,6 @@
         android:id="@+id/bloque_amarillo"
         android:layout_width="0dp"
         android:layout_height="700dp"
-        android:layout_marginBottom="200dp"
         android:background="@color/colorPrimary"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,92 +89,70 @@
             android:id="@+id/authLayout"
             android:layout_width="0dp"
             android:layout_height="650dp"
-            android:layout_marginBottom="30dp"
             android:background="@color/white"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/textView18"
-                android:layout_width="340dp"
-                android:layout_height="95dp"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="27dp"
-                android:text="@string/texto1Hist"
-                android:textAlignment="textEnd"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
-                tools:ignore="MissingConstraints"
-                tools:text="Testfarma nace para cubrir la necesidad de ir más allá en la venta y distribución de insumos médicos y pruebas de diagnóstico clínico, así como de productos farmacéuticos. " />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="188dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="16dp"
-                android:text="@string/historia"
-                android:textAlignment="textEnd"
-                android:textSize="26sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4"
-                tools:text="Nuestra Historia" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="340dp"
-                android:layout_height="95dp"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="26dp"
-                android:text="@string/texto2Hist"
-                android:textAlignment="textEnd"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView18"
-                tools:ignore="TextContrastCheck,TextContrastCheck"
-                tools:text="Testfarma, es una empresa que brinda además asesoría técnica con profesionales de la salud, para que el cliente pueda implementar efectivamente sus proyectos de diagnóstico, bien sea en el ámbito de la salud laboral y ocupacional; así como tamizajes y diagnósticos para trabajadores ó público en general." />
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="61dp"
-                android:layout_marginEnd="61dp"
-                android:fontFamily="sans-serif"
-                android:text="@string/acerca"
-                android:textAlignment="center"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4"
-                tools:text="A cerca de nosotros" />
 
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="135dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/docsvertical" />
+
+            <TextView
+                android:id="@+id/titutloAcerca"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="66dp"
+                android:layout_marginTop="24dp"
+
+                android:layout_marginEnd="66dp"
+                android:text="Acerca de nosotros"
+                android:textColor="#7E7E7E"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.666"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+            <TextView
+                android:id="@+id/texto1Acerca"
+                android:layout_width="352dp"
+                android:layout_height="125dp"
+                android:layout_marginTop="24dp"
+                android:text="@string/text1Ace"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/titutloAcerca" />
+
+            <TextView
+                android:id="@+id/texto2Acerca"
+                android:layout_width="352dp"
+                android:layout_height="125dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="152dp"
+                android:text="@string/text1Ace"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.487"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/texto1Acerca"
+                app:layout_constraintVertical_bias="0.0" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
