--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -6,56 +6,39 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
+
+    <Button
+        android:id="@+id/cancelarReg"
+        android:layout_width="288dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="136dp"
+        android:text="@string/back"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="1.0" />
+
     <ImageButton
         android:id="@+id/logo2"
         android:layout_width="200dp"
         android:layout_height="42dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/logo"
         android:contentDescription="@string/logo"
         android:foregroundGravity="center|center_horizontal"
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck"
         tools:layout_conversion_absoluteHeight="70dp"
         tools:layout_conversion_absoluteWidth="245dp" />
-
-    <ImageButton
-        android:id="@+id/perfil2"
-        android:layout_width="35dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="14dp"
-        android:background="@drawable/perfil"
-        android:contentDescription="@string/perfil"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/logo2"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck"
-        tools:layout_conversion_absoluteHeight="40dp"
-        tools:layout_conversion_absoluteWidth="40dp" />
-
-    <ImageButton
-        android:id="@+id/menu2"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="6dp"
-        android:background="@drawable/menu"
-        android:contentDescription="@string/menu"
-        android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/logo2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck"
-        tools:layout_conversion_absoluteHeight="40dp"
-        tools:layout_conversion_absoluteWidth="40dp" />
-
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -154,7 +137,6 @@
         android:text="@string/registrarse"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
@@ -163,12 +145,11 @@
         android:layout_width="296dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/terms"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
 
