--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -108,7 +108,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/password"
-                app:layout_constraintVertical_bias="0.113"
+                app:layout_constraintVertical_bias="0.066"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
@@ -164,7 +164,7 @@
                 app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView4"
-                app:layout_constraintVertical_bias="0.187" />
+                app:layout_constraintVertical_bias="0.068" />
 
             <Button
                 android:id="@+id/back"
@@ -177,7 +177,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.495"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/google_button" />
+                app:layout_constraintTop_toBottomOf="@+id/google_button"
+                app:layout_constraintVertical_bias="0.052" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
