--- a/app/src/main/res/layout/activity_acercadenos.xml
+++ b/app/src/main/res/layout/activity_acercadenos.xml
@@ -138,7 +138,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/titutloAcerca" />
 
             <TextView
-                android:id="@+id/texto2Acerca"
+                android:id="@+id/acerca_de"
                 android:layout_width="352dp"
                 android:layout_height="125dp"
                 android:layout_marginTop="24dp"
