--- a/app/src/main/res/layout/user_info_layout.xml
+++ b/app/src/main/res/layout/user_info_layout.xml
@@ -19,21 +19,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/perfil"
-            android:layout_width="35dp"
-            android:layout_height="42dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/perfil"
-            android:contentDescription="@string/perfil"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="TouchTargetSizeCheck"
-            tools:layout_conversion_absoluteHeight="40dp"
-            tools:layout_conversion_absoluteWidth="40dp" />
-
-        <ImageButton
             android:id="@+id/menu"
             android:layout_width="40dp"
             android:layout_height="35dp"
@@ -55,16 +40,14 @@
             android:id="@+id/logo"
             android:layout_width="200dp"
             android:layout_height="42dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="32dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/logo"
             android:contentDescription="@string/logo"
             android:foregroundGravity="center|center_horizontal"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/perfil"
-            app:layout_constraintHorizontal_bias="0.75"
             app:layout_constraintStart_toEndOf="@+id/menu"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TouchTargetSizeCheck"
@@ -244,6 +227,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/calle"
                 tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                 android:autofillHints="" />
+
+            <Button
+                android:id="@+id/btnGuardarDatos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/guardar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/numero"
+                tools:ignore="TextContrastCheck" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
