--- a/app/src/main/res/layout/activity_menu_app.xml
+++ b/app/src/main/res/layout/activity_menu_app.xml
@@ -10,58 +10,63 @@
 
     <Button
         android:id="@+id/btn_citas"
-        android:layout_width="393dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
         android:backgroundTint="#c4c4c4"
         android:text="Citas"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <Button
         android:id="@+id/btn_promo"
-        android:layout_width="393dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:backgroundTint="@color/colorPrimaryVariant"
         android:text="Promociones"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_estudios" />
 
     <Button
         android:id="@+id/btn_estudios"
-        android:layout_width="393dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:backgroundTint="#c4c4c4"
         android:text="Estudios disponibles"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_resultados" />
 
     <Button
         android:id="@+id/btn_resultados"
-        android:layout_width="393dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="51dp"
         android:backgroundTint="@color/colorPrimaryVariant"
         android:text="Resultados"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_citas"
         tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/btn_nosotros"
-        android:layout_width="393dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:backgroundTint="#c4c4c4"
         android:text="A cerca de nosotros"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_promo" />
 
     <ImageButton
@@ -69,12 +74,12 @@
         android:layout_width="200dp"
         android:layout_height="42dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="96dp"
         android:background="@drawable/logo"
         android:contentDescription="@string/logo"
         android:foregroundGravity="center|center_horizontal"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck"
         tools:layout_conversion_absoluteHeight="70dp"
