--- a/app/src/main/res/layout/user_info_layout.xml
+++ b/app/src/main/res/layout/user_info_layout.xml
@@ -90,143 +90,100 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/user_icon" />
 
-            <EditText
-                android:id="@+id/nom_paciente"
+            <TextView
+                android:id="@+id/textNomUser"
                 android:layout_width="302dp"
-                android:layout_height="38dp"
+                android:layout_height="36dp"
                 android:layout_marginTop="16dp"
-                android:autofillHints=""
-                android:ems="10"
-                android:hint="@string/nom_paciente"
-                android:inputType="textPersonName"
-                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView7"
-                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
-            <EditText
-                android:id="@+id/email_user_info"
+            <TextView
+                android:id="@+id/textEmail"
                 android:layout_width="302dp"
-                android:layout_height="38dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"
+                android:layout_height="36dp"
+                android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nom_paciente"
-                tools:ignore="TouchTargetSizeCheck"
-                android:autofillHints="" />
+                app:layout_constraintTop_toBottomOf="@+id/textNomUser" />
 
             <TextView
                 android:id="@+id/acerca_de"
                 android:layout_width="352dp"
                 android:layout_height="38dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/completar_registro"
                 android:textAlignment="center"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/email_user_info" />
+                app:layout_constraintTop_toBottomOf="@+id/textEmail" />
 
             <EditText
-                android:id="@+id/rfc"
+                android:id="@+id/telefono"
                 android:layout_width="352dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
+                android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_rfc"
+                android:hint="@string/ingrese_su_telefono"
                 android:inputType="textPersonName"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/acerca_de"
-                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
-                android:autofillHints="" />
+                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
             <EditText
-                android:id="@+id/estado"
+                android:id="@+id/fechaNac"
                 android:layout_width="352dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
+                android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_estado"
+                android:hint="@string/ingrese_su_fecha_de_nacimiento"
                 android:inputType="textPersonName"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rfc"
-                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
-                android:autofillHints="" />
+                app:layout_constraintTop_toBottomOf="@+id/telefono"
+                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
             <EditText
-                android:id="@+id/cod_post"
+                android:id="@+id/estatura"
                 android:layout_width="352dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
+                android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_codigo_postal"
+                android:hint="@string/ingrese_su_estatura"
                 android:inputType="textPersonName"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/estado"
-                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
-                android:autofillHints="" />
+                app:layout_constraintTop_toBottomOf="@+id/fechaNac"
+                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
             <EditText
-                android:id="@+id/colonia"
+                android:id="@+id/peso"
                 android:layout_width="352dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="16dp"
+                android:autofillHints=""
                 android:ems="10"
-                android:hint="@string/ingrese_su_colonia"
+                android:hint="@string/ingrese_su_peso"
                 android:inputType="textPersonName"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.487"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cod_post"
-                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
-                android:autofillHints="" />
-
-            <EditText
-                android:id="@+id/calle"
-                android:layout_width="352dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/ingrese_su_calle"
-                android:inputType="textPersonName"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.487"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/colonia"
-                tools:ignore="TouchTargetSizeCheck"
-                android:autofillHints="" />
-
-            <EditText
-                android:id="@+id/numero"
-                android:layout_width="352dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="12dp"
-                android:ems="10"
-                android:hint="@string/ingrese_el_numero"
-                android:inputType="textPersonName"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.487"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/calle"
-                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
-                android:autofillHints="" />
+                app:layout_constraintTop_toBottomOf="@+id/estatura"
+                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
             <Button
                 android:id="@+id/btnGuardarDatos"
@@ -236,7 +193,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/numero"
                 tools:ignore="TextContrastCheck" />
 
 
